--- a/src/SFA.Apprenticeships.Web.Recruit/packages.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/packages.config
@@ -38,6 +38,7 @@
   <package id="NLog" version="4.0.1" targetFramework="net452" />
   <package id="NLog.Contrib" version="1.0.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="RazorGenerator.Mvc" version="2.3.12" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net452" />
   <package id="structuremap.web" version="3.1.0.133" targetFramework="net452" />
