US837: Resuming a vacancy

--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Validators\Providers\ProviderSiteSearchViewModelValidatorTests.cs" />
     <Compile Include="Validators\ProviderUser\ProviderUserViewModelValidatorTests.cs" />
     <Compile Include="Validators\VacancyPosting\NewVacancyViewModelServerValidatorTests.cs" />
+    <Compile Include="Views\VacancyPosting\EditVacancyTests.cs" />
     <Compile Include="Views\VacancyPosting\VacancyQuestionsTests.cs" />
     <Compile Include="Views\VacancyPosting\RequirementsProspectsTests.cs" />
     <Compile Include="Views\VacancyPosting\PreviewVacancyTests.cs" />
