--- a/src/SFA.Apprenticeships.Web.Manage/Web.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.config
@@ -7,15 +7,6 @@
   <configSections>
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
-  <system.diagnostics>
-    <trace>
-      <listeners>
-        <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
-          <filter type="" />
-        </add>
-      </listeners>
-    </trace>
-  </system.diagnostics>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -28,14 +19,6 @@
     <add key="ida:SessionTimeout" value="60" />
     <add key="CdnUrl" value="//az693499.vo.msecnd.net" />
   </appSettings>
-  <!--
-    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
-
-    The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
-        <httpRuntime targetFramework="4.5.1" />
-      </system.Web>
-  -->
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
@@ -243,7 +226,7 @@
       -->
     </targets>
     <rules>
-      <logger name="*" minlevel="Info" writeTo="fallbacklogger" />
+      <logger name="*" minlevel="Debug" writeTo="fallbacklogger" />
     </rules>
   </nlog>
 </configuration>
