Specifying no caching on any page. Cashing will be the exception

--- a/src/SFA.Apprenticeships.Web.Recruit/Web.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.config
@@ -20,6 +20,18 @@
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
     <httpCookies httpOnlyCookies="true" requireSSL="false" />
+    <caching>
+      <outputCache />
+      <outputCacheSettings>
+        <outputCacheProfiles>
+          <add name="Long" duration="3600" varyByParam="none" />
+          <add name="Short" duration="10" varyByParam="none" />
+          <add name="Data" duration="600" varyByParam="none" />
+          <add name="SiteMap" duration="1800" varyByParam="none" />
+          <add name="None" duration="0" noStore="true" varyByParam="none" />
+        </outputCacheProfiles>
+      </outputCacheSettings>
+    </caching>
     <customErrors mode="Off" />
   </system.web>
   <runtime>
