--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
@@ -156,6 +156,8 @@
     <Compile Include="Mediators\VacancyPosting\RequirementsProspectsTests.cs" />
     <Compile Include="Mediators\VacancyPosting\TestsBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\ProviderProvider\CreateVacancyTests.cs" />
+    <Compile Include="Providers\ProviderProvider\TestBase.cs" />
     <Compile Include="Providers\ProviderUser\ProviderUserProviderBuilder.cs" />
     <Compile Include="Providers\ProviderUser\ProviderUserProviderTests.cs" />
     <Compile Include="Providers\VacancyPosting\CreateVacancyTests.cs" />
