--- a/src/SFA.Apprenticeship.Api.AvmsCompatability/packages.config
+++ b/src/SFA.Apprenticeship.Api.AvmsCompatability/packages.config
@@ -5,4 +5,6 @@
   <package id="EnterpriseLibrary.ExceptionHandling.WCF" version="6.0.1304.0" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="structuremap" version="3.1.6.186" targetFramework="net452" />
 </packages>
