Validation and tests for Vacancy Questions

--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
@@ -172,6 +172,9 @@
     <Compile Include="Validators\VacancyPosting\MandatoryHoursAndDurationConditionTests.cs" />
     <Compile Include="Validators\VacancyPosting\MandatoryWageTests.cs" />
     <Compile Include="Validators\VacancyPosting\NewVacancyViewModelServerValidatorTests.cs" />
+    <Compile Include="Validators\VacancyPosting\VacancyQuestionsViewModelClientValidatorTests.cs" />
+    <Compile Include="Validators\VacancyPosting\VacancyQuestionsViewModelServerValidatorTests.cs" />
+    <Compile Include="Validators\VacancyPosting\VacancyRequirementsProspectsViewModelServerValidatorTests.cs" />
     <Compile Include="Validators\VacancyPosting\VacancyRequirementsProspectsViewModelClientValidatorTests.cs" />
     <Compile Include="Validators\VacancyPosting\VacancySummaryViewModelClientValidatorTests.cs" />
     <Compile Include="Validators\VacancyPosting\VacancySummaryViewModelServerValidatorTests.cs" />
