--- a/src/SFA.Apprenticeship.Api.AvmsCompatability/Web.config
+++ b/src/SFA.Apprenticeship.Api.AvmsCompatability/Web.config
@@ -1,13 +1,70 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=169433
-  -->
 <configuration>
+  <system.diagnostics>
+    <trace>
+      <listeners>
+        <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
+          <filter type="" />
+        </add>
+      </listeners>
+    </trace>
+  </system.diagnostics>
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <compilation debug="true" targetFramework="4.5.1" />
+    <httpRuntime targetFramework="4.5.1" />
   </system.web>
+
+  <system.serviceModel>
+    <!-- TODO: review / remove these settings. -->
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" minFreeMemoryPercentageToActivateService="0" />
+
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="DefaultServiceBehaviour">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <!-- TODO: do not expose exceptions. -->
+          <serviceDebug includeExceptionDetailInFaults="true" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+
+    <bindings>
+      <basicHttpBinding>
+        <binding name="LegacyReferenceDataServiceBinding"  maxReceivedMessageSize="2147483647">
+          <security mode="Transport" />
+        </binding>
+      </basicHttpBinding>
+      <!--
+      <wsHttpBinding>
+        <binding name="WSHttpBinding_Direct" maxReceivedMessageSize="2147483647">
+          <security mode="None">
+            <transport clientCredentialType="None" />
+            <message clientCredentialType="None" />
+          </security>
+        </binding>
+      </wsHttpBinding>
+      -->
+    </bindings>
+
+    <client>
+      <endpoint address="https://apprenticeshipvacancymatchingservice.lsc.gov.uk/services/ReferenceData/ReferenceData51.svc"
+        binding="basicHttpBinding" bindingConfiguration="LegacyReferenceDataServiceBinding"
+        contract="LegacyReferenceDataService.IReferenceData" name="LegacyReferenceDataService" />
+    </client>
+
+    <services>
+      <service name="SFA.Apprenticeship.Api.AvmsCompatability.ServiceImplementation.Version50.ReferenceDataService" behaviorConfiguration="DefaultServiceBehaviour">
+        <endpoint binding="basicHttpBinding" bindingNamespace="http://Navms.Ms.ExternalInterfaces/2011" contract="SFA.Apprenticeship.Api.AvmsCompatability.ServiceContracts.Version50.IReferenceData" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+      </service>
+
+      <service name="SFA.Apprenticeship.Api.AvmsCompatability.ServiceImplementation.Version51.ReferenceDataService" behaviorConfiguration="DefaultServiceBehaviour">
+        <endpoint binding="basicHttpBinding" bindingNamespace="http://services.imservices.org.uk/AVMS/Interfaces/5.1" contract="SFA.Apprenticeship.Api.AvmsCompatability.ServiceContracts.Version51.IReferenceData" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+      </service>
+    </services>
+  </system.serviceModel>
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
